an example of how to include

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,3 +5,13 @@ Clone this repository as a folder at `~/.R/snippets`
 
 in the case of windows this will actually be at `~/Documents/.R/snippets`, at least
 on my machine
+
+Eg on windows do:
+
+```
+cd ~/Documents/.R
+git clone https://github.com/dpastoor/rstudio-snippets.git snippets
+```
+
+You may or may not need to remove that existing folder, if it exists, before cloning.
+
