--- a/README.Rmd
+++ b/README.Rmd
@@ -1,16 +1,16 @@
 rstudio-snippets
 =======
 
-Clone this repository as a folder at `~/.R/snippets`
+Clone this repository as a folder at `~/.R/rstudio`
 
-in the case of windows this will actually be at `~/Documents/.R/snippets`, at least
+in the case of windows this will actually be at `~/Documents/.R/rstudio`, at least
 on my machine
 
 Eg on windows do:
 
 ```
 cd ~/Documents/.R
-git clone https://github.com/dpastoor/rstudio-snippets.git snippets
+git clone https://github.com/dpastoor/rstudio-snippets.git rstudio
 ```
 
 You may or may not need to remove that existing folder, if it exists, before cloning.
