--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,9 @@ git clone https://github.com/dpastoor/rstudio-snippets.git .R
 
 You may or may not need to remove that existing folder, if it exists, before cloning.
 
+on mac is in `~/.R/rstudio`
+
+
 ## extra snippets
 
 ### testing-related
